--- a/src/main/java/fr/jmmc/oimaging/gui/SoftwareSettingsPanel.form
+++ b/src/main/java/fr/jmmc/oimaging/gui/SoftwareSettingsPanel.form
@@ -399,6 +399,7 @@
         <Component class="javax.swing.JButton" name="jButtonCreateImage">
           <Properties>
             <Property name="text" type="java.lang.String" value="Create image"/>
+            <Property name="name" type="java.lang.String" value="jButtonCreateImage" noResource="true"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
